--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ python-dotenv==1.0.0
 numpy==1.24.3
 requests==2.31.0
 
+# Data validation
+great-expectations==0.18.12
+
 # Monitoring
 prometheus-client==0.17.1
 
